--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,17 @@
         <h3 class="title">分 类</h3>
         <hr class="line" />
 
-         
+      	 <ul class="listing">
+		    {% for cat in site.categories %}
+		      <li class="listing-seperator" id="{{ cat[0] }}">{{ cat[0] }}---</li>
+		    {% for post in cat[1] %}
+		      <li class="listing-item">
+		      <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
+		      <a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+		      </li>
+		    {% endfor %}
+		    {% endfor %}
+		  </ul>
       </div>
 
       <div class="blog-new">
