--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,9 +203,9 @@ body{
  * Posts
  */
 .post{
-    background-color: #eeeeee;
+    background-color: rgba(0,0,0,0);
     width: 1040px;
-    height: 1000px;
+    padding: 10px;
     margin:20px auto 0 auto;
     box-shadow: 0px 0 10px 0px gray ;  
 }
