--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,17 +1,35 @@
 /**
  * Syntax highlighting styles
  */
+ code{
+    background-color:yellow;
+
+ }
 .highlight {
-    background: #fff;
+    
+    
+    background: red;
+     
+        border-color: #ccc;
+        background-color:white;
+
+   
     @extend %vertical-rhythm;
+    pre{
+        background-color:white;
 
-    .highlighter-rouge & {
-      background: #eef;
     }
+    code{
+        background-color:white;
 
+    }
+    .highlighter-rouge & {
+      background:white;
+    
+    }
     .c     { color: #998; font-style: italic } // Comment
     .err   { color: #a61717; background-color: #e3d2d2 } // Error
-    .k     { font-weight: bold } // Keyword
+    .k     { font-weight: bold;color:rgb(194,65,142) } // Keyword
     .o     { font-weight: bold } // Operator
     .cm    { color: #998; font-style: italic } // Comment.Multiline
     .cp    { color: #999; font-weight: bold } // Comment.Preproc
@@ -42,7 +60,7 @@
     .no    { color: #008080 } // Name.Constant
     .ni    { color: #800080 } // Name.Entity
     .ne    { color: #900; font-weight: bold } // Name.Exception
-    .nf    { color: #900; font-weight: bold } // Name.Function
+    .nf    { color:rgb(89,37,149); font-weight: bold } // Name.Function
     .nn    { color: #555 } // Name.Namespace
     .nt    { color: #000080 } // Name.Tag
     .nv    { color: #008080 } // Name.Variable
@@ -50,7 +68,7 @@
     .w     { color: #bbb } // Text.Whitespace
     .mf    { color: #099 } // Literal.Number.Float
     .mh    { color: #099 } // Literal.Number.Hex
-    .mi    { color: #099 } // Literal.Number.Integer
+    .mi    { color: rgb(28,65,227) } // Literal.Number.Integer
     .mo    { color: #099 } // Literal.Number.Oct
     .sb    { color: #d14 } // Literal.String.Backtick
     .sc    { color: #d14 } // Literal.String.Char
