--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,5 +41,16 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script>
+    <!-- 百度统计start -->
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "//hm.baidu.com/hm.js?b9b189eaf06981520a3022e5f206e884";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	<!-- 百度统计end -->
+
+    </script>
 </head>
